// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders engagement report page 1`] = `
<Page
  empty={Object {}}
  title="Engagement Report"
>
  <Panel
    sectioned={true}
  >
    <LoadableComponent />
  </Panel>
</Page>
`;

exports[`renders engagement report page with data 1`] = `
<Page
  empty={Object {}}
  title="Engagement Report"
>
  <Panel
    sectioned={true}
  >
    <LoadableComponent
      accepted={1}
      clicks={3}
      opens={4}
      targeted={2}
    />
  </Panel>
</Page>
`;
